--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   flutter_riverpod: ^2.3.4
   freezed_annotation: ^2.2.0
+  path: ^1.8.2
+  sqflite: ^2.2.7
 
 dev_dependencies:
   flutter_test:
