--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   flutter_riverpod: ^2.3.4
   freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
   path: ^1.8.2
   sqflite: ^2.2.7
 
@@ -24,6 +25,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   freezed: ^2.3.2
+  json_serializable: ^6.6.1
 
 flutter:
   uses-material-design: true
