--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
 
   flutter_riverpod: ^2.3.4
+  fpdart: ^0.6.0
   freezed_annotation: ^2.2.0
   path: ^1.8.2
   sqflite: ^2.2.7
